src/test/resources/syntactic/error/TC_ERROR_CODE_AFTER_START.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 7 | COLUMNA 1 | SE ESPERABA: EOF Y SE ENCONTRO: struct |
start{
    Int a;
}
struct Fibonacci {
    Int suma;
    Int i,j;
}